--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+my.name = arushi
 spring.datasource.url =jdbc:postgresql://database-1.cnhmmwcfgjht.us-east-1.rds.amazonaws.com:5432/
 spring.datasource.username= postgres
 spring.datasource.password = postgres
